--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "nodemailer": "^7.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "resend": "^4.7.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
