--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^7.1.2",
     "@mui/material": "^7.1.2",
     "@prisma/client": "^6.11.1",
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.19.1",
     "next": "15.3.3",
     "next-sitemap": "^4.2.3",
